App translated to arabic

--- a/lib/lang/en.json
+++ b/lib/lang/en.json
@@ -1,4 +1,101 @@
 {
-  "overAllProjectName": "Meeca-Winch",
-  "Key2": "value"
+  "IIINNNTTTRRROOOOOOOOOOOOOOOOOOOOOOOOOO": "PAAAAAAAGGGGGEEEEEEEE",
+  "Mechawinch": "Mecha-Winch",
+  "customer app- let's start": "Customer App ,Let's Start",
+  "GET STARTED": "GET STARTED",
+  "info 1": "info 1",
+  "info 2": "info 2",
+  "info 3": "info 3",
+
+  "PHONE NUMBER": "PAAAAAAAGGGGGEEEEEEEE",
+  "Enter Mobile Number:": "Enter Mobile Number:",
+  "Enter your mobile number ,to create an account or to log in to existing one.": "Enter your mobile number ,to create an account or to log in to existing one.",
+  "Continue": "Continue",
+
+  "OTP": "PAAAAAAAGGGGGEEEEEEEE",
+  "Verify This Mobile  Number": "Verify This Mobile  Number",
+  "We sent your code via SMS to": "We sent your code via SMS to",
+  "Please enter this code here": "Please enter this code here ",
+  "Resend Code": "Resend Code  ",
+  "Edit number": " Edit number",
+  "Verify": "Verify",
+  "failed to get user fire token": "failed to get user fire token",
+  "InvalidUserToken": "InvalidUserToken",
+  "Invalid OTP": "Invalid OTP",
+  "This Code": "This Code $otpcode doesn't match with the code we sent to you",
+  "doesn't match with the code we sent to you": "doesn't match with the code we sent to you",
+  "Please Enter the Received code": "Please Enter the Received code",
+  "Try Again": "Try Again",
+  "Empty Fields": "Empty Fields",
+
+
+
+  "confirm user": "PAAAAAAAGGGGGEEEEEEEE",
+  "Is That You ?": ",Is That You ?",
+  "Yes, its Me": "Yes, its Me",
+  "No, Edit Info": "No, Edit Info",
+  "Edit my info": "Edit my info",
+
+  "register new user page": "PAAAAAAAGGGGGEEEEEEEE",
+  "Register New customer": "Register New customer",
+  "What's Your Name ?": "What's Your Name ?",
+  "Your name helps Captains to confirm who they 're picking up":  "Your name helps Captains to confirm who they 're picking up",
+  "You registered by first & last name": "You registered by first & last name",
+  "You registered by your Google account": "You registered by your Google account",
+  "You registered by your Facebook account": "You registered by your Facebook account",
+  "Failed to sync your Data to the server": "Failed to sync your Data to the server",
+  "Failed to fetch your Data from google account": "Failed to fetch your Data from your google account",
+  "Failed to fetch your Data from your facebook account": "Failed to fetch your Data from your facebook account",
+  "Invalid User Token":  "Invalid User Token",
+  "Successfully Signed Up": "Successfully Signed Up",
+  "Getting Your Data Failed": "Getting Your Data Failed",
+  "You successfully created account in our app": "You successfully created account in our app",
+  "There is something wrong while fetching your data": "There is something wrong while fetching your data",
+  "Go To Home Page": "Go To Home Page",
+  "Try again": "Try again",
+  "Continue with Facebook":"Continue with Facebook",
+  "Continue with Google": "Continue with Google",
+  "Continue with Apple ID": "Continue with Apple ID",
+  "Create Account": "Create Account",
+
+  "dashboard page": "PAAAAAAAGGGGGEEEEEEEE",
+  "Home": "Home",
+  "Chatbot": "Chatbot",
+  "Profile": "Profile",
+
+
+  "home page": "PAAAAAAAGGGGGEEEEEEEE",
+  "Welcome": "Welcome ",
+  "Winch": "Winch",
+  "Mechanic": "Mechanic",
+  "Your Cars": "Your Cars",
+  "Add New": "Add New",
+  "No Added Cars": "No Added Cars",
+  "Please add at least one ,to be able to use our services": "Please add at least one car ,to be able to use our services",
+  "Car Brand": "Car Brand",
+  "Car Model": "Car Model",
+  "Year of Production": "Year of Production",
+  "Required information": "Required information",
+  "Please enter selected car plates here": "Please enter selected car plates here",
+
+  "Profile page": "PAAAAAAAGGGGGEEEEEEEE",
+  "Logout": "Logout",
+  "Are you sure that you want to leave our app?": "Are you sure that you want to leave our app?",
+  "Leave": "Leave",
+  "Stay": "Stay",
+  "Customer Information": "Customer Information",
+  "Phone": "Phone number",
+  "Detailed Info": "Detailed Info",
+  "User ID": "User ID",
+  "Email": "Email",
+
+  "winch selection": "PAAAAAAAGGGGGEEEEEEEE",
+  "where you want to go": "where you want to go, ",
+  "enter your destination here":"Search your destination here..",
+  "Set A location on the map": "Set A location on the map",
+  "Add Home": "Add Home",
+  "Your living home address": "Your living home address",
+  "Add Work": "Add Work",
+  "Your office address": "Your office address",
+  "Set Drop Off": "Set Drop Off"
 }
