some modification added on translation

--- a/lib/lang/ar.json
+++ b/lib/lang/ar.json
@@ -1,4 +1,7 @@
 {
+  "Common widgets": "PAAAAAAAGGGGGEEEEEEEE",
+  "Please wait": "انتظر قليلا...",
+
   "IIINNNTTTRRROOOOOOOOOOOOOOOOOOOOOOOOOO": "PAAAAAAAGGGGGEEEEEEEE",
   "Mechawinch": "ميكا-ونش",
   "customer app- let's start": "تطبيق العميل,هيا نبدأ",
