--- a/lib/lang/en.json
+++ b/lib/lang/en.json
@@ -1,6 +1,10 @@
 {
+  "Common widgets": "PAAAAAAAGGGGGEEEEEEEE",
+  "Please wait": "Please wait...",
+
   "IIINNNTTTRRROOOOOOOOOOOOOOOOOOOOOOOOOO": "PAAAAAAAGGGGGEEEEEEEE",
   "Mechawinch": "Mecha-Winch",
+
   "customer app- let's start": "Customer App ,Let's Start",
   "GET STARTED": "GET STARTED",
   "info 1": "info 1",
