--- a/lib/lang/en.json
+++ b/lib/lang/en.json
@@ -26,7 +26,7 @@
   "failed to get user fire token": "failed to get user fire token",
   "InvalidUserToken": "InvalidUserToken",
   "Invalid OTP": "Invalid OTP",
-  "This Code": "This Code $otpcode doesn't match with the code we sent to you",
+  "This Code": "This Code ",
   "doesn't match with the code we sent to you": "doesn't match with the code we sent to you",
   "Please Enter the Received code": "Please Enter the Received code",
   "Try Again": "Try Again",
